--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"postcss": "^8.4.14",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"prisma": "^3.15.2",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
@@ -33,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^3.15.2",
 		"clsx": "^1.1.1",
 		"lucide-svelte": "^0.68.0"
 	}
