--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.7",
@@ -27,6 +28,7 @@
 		"prisma": "^3.15.2",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-feather-icons": "^4.0.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.4",
 		"tslib": "^2.3.1",
@@ -35,7 +37,8 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^3.15.2",
+		"argon2": "^0.28.5",
 		"clsx": "^1.1.1",
-		"lucide-svelte": "^0.68.0"
+		"cookie": "^0.5.0"
 	}
 }
