--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@prisma/client": "^3.15.2",
 		"argon2": "^0.28.5",
 		"clsx": "^1.1.1",
-		"cookie": "^0.5.0"
+		"cookie": "^0.5.0",
+		"zod": "^3.17.3"
 	}
 }
