--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.5.1",
+		"@types/node": "^18.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.7",
@@ -31,6 +32,7 @@
 		"svelte-feather-icons": "^4.0.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.4",
+		"ts-node": "^10.8.1",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2"
 	},
@@ -41,5 +43,8 @@
 		"clsx": "^1.1.1",
 		"cookie": "^0.5.0",
 		"zod": "^3.17.3"
+	},
+	"prisma": {
+		"seed": "node --loader ts-node/esm prisma/seed.ts"
 	}
 }
