--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^3.15.2",
+		"@tailwindcss/forms": "^0.5.2",
 		"argon2": "^0.28.5",
 		"clsx": "^1.1.1",
 		"cookie": "^0.5.0",
